--- a/OTP verification/index.html
+++ b/OTP verification/index.html
@@ -1,39 +1,154 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Email Template</title>
-</head>
-<body align="center" style="margin: 0; padding: 0; background-color: #ffffff;">
-    <table align="center" width="640px"; cellspacing="0" cellpadding="0" border="0" style=" background-color: #F4F4FB; padding: 32px;">
-    
-                 <!-- Header Section-->
-                <tr>
-                    <td>
-                    <a target="_blank" href="#"><img src="../img/logo.svg" alt="logo"></a>
-                    <p style="font-size: 41px; padding: 32px; line-height: 0; margin: 0; margin-top: 20px;">OTP Verification</p>
-                    <p>03-Jun-2024</p>
-                    </td>
-                </tr>
-    <!-- Middle Section -->
-
-    <tr style="background-color: white; border: 5px; ">
-        <td style="text-align: start; padding: 32px; font-size: 20px; border-radius: 4px;">
-            <p >Dear Shaher,</p>
-            <p>Thank you for choosing NobleMarriage!</p>
-            <p>To complete your registration, please verify your email address by using the below OTP:</p>
-            <p style="font-weight: bold; text-align: center; margin-bottom: 10px; padding-top: 15px;">Use this OTP</p>
-            <p style="background-color: #F5F6F7; padding: 16px; border-radius: 16px; margin: 0px 34px; text-align: center; font-size: 41px; letter-spacing: 40px;">123456</p>
-            <p>If you have any questions or need assistance, please contact us at <a href="#">support@noblemarriage.com</a>.</p>
-            <p>Best wishes, <br>
-                NobleMarriage Team</p>
-        </td>
-    </tr>
-    <!-- Footer Section -->
-     <tr>
+  </head>
+  <body align="center" style="margin: 0; padding: 0; background-color: #ffffff">
+    <table
+      align="center"
+      width="640px"
+      ;
+      cellspacing="0"
+      cellpadding="0"
+      border="0"
+      style="background-color: #f4f4fb; padding: 32px"
+    >
+      <!-- Header Section-->
+      <tr>
         <td>
-            <a style="background-color: #006FEE; text-decoration: none; padding: 12px 16px; color: #ffffff;" href="#">Open NobleMarriage</a>
+          <a target="_blank" href="#"
+            ><img src="../img/logo.svg" alt="logo"
+          /></a>
+          <p
+            style="
+              font-size: 41px;
+              padding: 32px;
+              line-height: 0;
+              margin: 0;
+              margin-top: 20px;
+            "
+          >
+            OTP Verification
+          </p>
+          <p style="font-size: 20px">03-Jun-2024</p>
         </td>
-     </tr>
+      </tr>
+      <!-- Middle Section -->
+
+      <tr style="background-color: white; border: 5px">
+        <td
+          style="
+            text-align: start;
+            padding: 32px;
+            font-size: 20px;
+            border-radius: 4px;
+          "
+        >
+          <p>Dear Shaher,</p>
+          <p>Thank you for choosing NobleMarriage!</p>
+          <p>
+            To complete your registration, please verify your email address by
+            using the below OTP:
+          </p>
+          <p
+            style="
+              font-weight: bold;
+              text-align: center;
+              margin-bottom: 10px;
+              padding-top: 15px;
+            "
+          >
+            Use this OTP
+          </p>
+          <p
+            style="
+              background-color: #f5f6f7;
+              padding: 16px;
+              border-radius: 16px;
+              margin: 0px 34px;
+              text-align: center;
+              font-size: 41px;
+              letter-spacing: 40px;
+            "
+          >
+            123456
+          </p>
+          <p>
+            If you have any questions or need assistance, please contact us at
+            <a href="#">support@noblemarriage.com</a>.
+          </p>
+          <p>
+            Best wishes, <br />
+            NobleMarriage Team
+          </p>
+        </td>
+      </tr>
+      <!-- Footer Section -->
+      <tr>
+        <td style="padding-top: 50px; padding-bottom: 40px">
+          <a
+            style="
+              background-color: #006fee;
+              text-decoration: none;
+              border-radius: 12px;
+              padding: 12px 16px;
+              color: #ffffff;
+            "
+            href="#"
+            >Open NobleMarriage</a
+          >
+        </td>
+      </tr>
+      <tr style="background-color: #eae6ed">
+        <td style="padding: 32px; border-radius: 4px">
+          <table align="center">
+            <tr>
+              <td>
+                <p>If you need any assistance, contact our support team.</p>
+                <a href="#"
+                  ><img
+                    src="../img/WhatsAppButtonGreenSmall.svg"
+                    alt="whatsapp Button"
+                /></a>
+                <p style="color: #310048; font-weight: bold">
+                  Download Our APP
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a style="margin-right: 30px" href="#"
+                  ><img src="../img/app-store.jpg" alt="apple Store"
+                /></a>
+                <a href="#"
+                  ><img src="../img/app-store.jpg" alt="playStore"
+                /></a>
+              </td>
+            </tr>
+            <tr>
+              <td style="width: 524px; background-color: gray"></td>
+            </tr>
+            <tr>
+              <td>
+                <p>© 2024 NobleMarriage. All rights reserved.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
+                <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
+                <a href="#"><img src="../img/whatsapp.svg" alt="whatsapp" /></a>
+                <a href="#"><img src="../img/tweeter.svg" alt="tweeter" /></a>
+                <a href="#"><img src="../img/Youtube.svg" alt="Youtube" /></a>
+                <a href="#"><img src="../img/Linkedin.svg" alt="Linkedin" /></a>
+                <a href="#"><img src="../img/pinterest.svg" alt="pinterest" /></a>
+                <a href="#"><img src="../img/reddit.svg" alt="reddit" /></a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
