--- a/OTP verification/index.html
+++ b/OTP verification/index.html
@@ -117,7 +117,7 @@
             </tr>
 
             <tr>
-              <td>
+              <td style="padding-bottom: 24px">
                 <a style="margin-right: 30px" href="#"
                   ><img src="../img/app-store.jpg" alt="apple Store"
                 /></a>
@@ -130,20 +130,52 @@
               <td style="width: 524px; background-color: gray"></td>
             </tr>
             <tr>
-              <td>
+              <td style="padding-top: 24px">
                 <p>© 2024 NobleMarriage. All rights reserved.</p>
               </td>
             </tr>
             <tr>
               <td>
-                <a href="#"><img src="../img/facebook.svg" alt="facebook" /></a>
-                <a href="#"><img src="../img/instagram.svg" alt="instagram" /></a>
-                <a href="#"><img src="../img/whatsapp.svg" alt="whatsapp" /></a>
-                <a href="#"><img src="../img/tweeter.svg" alt="tweeter" /></a>
-                <a href="#"><img src="../img/Youtube.svg" alt="Youtube" /></a>
-                <a href="#"><img src="../img/Linkedin.svg" alt="Linkedin" /></a>
-                <a href="#"><img src="../img/pinterest.svg" alt="pinterest" /></a>
-                <a href="#"><img src="../img/reddit.svg" alt="reddit" /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/facebook.svg" alt="facebook"
+                /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/instagram.svg" alt="instagram"
+                /></a>
+                <a
+                  style="
+                    margin-right: 20px;
+                    background-color: #25d366;
+                    padding: 4px;
+                    padding-top: 8px;
+                    border-radius: 100%;
+                  "
+                  href="#"
+                  ><img src="../img/whatsapp.svg" alt="whatsapp"
+                /></a>
+                <a
+                  style="
+                    margin-right: 20px;
+                    background-color: black;
+                    padding: 4px;
+                    padding-top: 8px;
+                    border-radius: 100%;
+                  "
+                  href="#"
+                  ><img src="../img/tweeter.svg" alt="tweeter"
+                /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/Youtube.svg" alt="Youtube"
+                /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/Linkedin.svg" alt="Linkedin"
+                /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/pinterest.svg" alt="pinterest"
+                /></a>
+                <a style="margin-right: 20px" href="#"
+                  ><img src="../img/reddit.svg" alt="reddit"
+                /></a>
               </td>
             </tr>
           </table>
