--- a/OTP verification/index.html
+++ b/OTP verification/index.html
@@ -127,7 +127,7 @@
               </td>
             </tr>
             <tr>
-              <td style="width: 524px; background-color: gray"></td>
+              <td style="width: 524px; background-color: #c2c7d0"></td>
             </tr>
             <tr>
               <td style="padding-top: 24px">
