--- a/Password Change/index.html
+++ b/Password Change/index.html
@@ -28,9 +28,11 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            OTP Verification
+            Reset Password OTP
           </p>
-          <p style="font-size: 20px; margin: 0; margin-bottom: 10px;">03-Jun-2024</p>
+          <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
+            03-Jun-2024
+          </p>
         </td>
       </tr>
 
@@ -46,10 +48,12 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p>Thank you for choosing NobleMarriage!</p>
+          <p style="font-weight: bold">
+            We received a request to change your password.
+          </p>
           <p>
-            To complete your registration, please verify your email address by
-            using the below OTP:
+            If you would like to change the password, please enter the OTP and
+            complete the process.
           </p>
           <p
             style="
@@ -63,13 +67,14 @@
           </p>
           <p
             style="
-              margin: 0px 30px;
+            margin: 0px 30px;
               background-color: #f5f6f7;
               padding: 16px;
               border-radius: 16px;
               text-align: center;
               font-size: 41px;
               letter-spacing: 40px;
+              text-align: center;
             "
           >
             123456
@@ -142,7 +147,9 @@
             </tr>
 
             <tr>
-              <td style="padding-top: 24px; text-align: center; font-size: 16px">
+              <td
+                style="padding-top: 24px; text-align: center; font-size: 16px"
+              >
                 <p>© 2024 NobleMarriage. All rights reserved.</p>
               </td>
             </tr>
