many thing approved

--- a/Country Change/index.html
+++ b/Country Change/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Template</title>
+    <title>Country Change Request Approved</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -14,7 +14,7 @@
         max-width: 640px;
         width: 100%;
         background-color: #f4f4fb;
-        padding: 32px;
+        padding: 32px;                   
         margin: auto;
       "
     >
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Reset Password OTP
+            Country Change Request Approved
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -49,39 +49,10 @@
         >
           <p>Dear Shaher,</p>
           <p style="font-weight: bold">
-            We received a request to change your password.
+            Your country change request has been approved by our Admin.
           </p>
           <p>
-            If you would like to change the password, please enter the OTP and
-            complete the process.
-          </p>
-          <p
-            style="
-              font-weight: bold;
-              text-align: center;
-              margin-bottom: 10px;
-              padding-top: 15px;
-            "
-          >
-            Use this OTP
-          </p>
-          <p
-            style="
-            margin: 0px 40px;
-              background-color: #f5f6f7;
-              padding: 16px;
-              border-radius: 16px;
-              text-align: center;
-              font-size: 41px;
-              letter-spacing: 40px;
-              text-align: center;
-            "
-          >
-            123456
-          </p>
-          <p style="margin-top: 35px;">
-            If you have any questions or need assistance, please contact us at
-            <a href="#">support@noblemarriage.com</a>.
+            Click on "Open NobleMarriage" to start finding your potential partner.
           </p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
@@ -247,6 +218,14 @@
                 </a>
               </td>
             </tr>
+            <tr align="center">
+                <td>
+                  <p style="font-size: 16px">
+                    If you prefer not to receive emails like this, you may
+                    <a href="#">unsubscribe</a>.
+                  </p>
+                </td>
+              </tr>
           </table>
         </td>
       </tr>
