--- a/Gender change/index.html
+++ b/Gender change/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Template</title>
+    <title>Gender Change Request Approved</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Reset Password OTP
+            Gender Change Request Approved
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -49,39 +49,11 @@
         >
           <p>Dear Shaher,</p>
           <p style="font-weight: bold">
-            We received a request to change your password.
+            Your gender change request has been approved by our Admin.
           </p>
           <p>
-            If you would like to change the password, please enter the OTP and
-            complete the process.
-          </p>
-          <p
-            style="
-              font-weight: bold;
-              text-align: center;
-              margin-bottom: 10px;
-              padding-top: 15px;
-            "
-          >
-            Use this OTP
-          </p>
-          <p
-            style="
-            margin: 0px 40px;
-              background-color: #f5f6f7;
-              padding: 16px;
-              border-radius: 16px;
-              text-align: center;
-              font-size: 41px;
-              letter-spacing: 40px;
-              text-align: center;
-            "
-          >
-            123456
-          </p>
-          <p style="margin-top: 35px;">
-            If you have any questions or need assistance, please contact us at
-            <a href="#">support@noblemarriage.com</a>.
+            Click on "Open NobleMarriage" to start finding your potential
+            partner.
           </p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
@@ -102,7 +74,7 @@
           >
             Open NobleMarriage
           </a>
-        </td>
+        </td> 
       </tr>
 
       <tr style="background-color: #eae6ed">
@@ -127,7 +99,7 @@
 
             <tr align="center">
               <td style="padding-bottom: 24px">
-                <a style="margin-right: 30px; text-decoration: none;" href="#">
+                <a style="margin-right: 30px; text-decoration: none" href="#">
                   <img
                     src="https://noble-marriage-cdn-bucket.s3.ap-southeast-1.amazonaws.com/emailassets/appStore.jpg"
                     alt="apple Store"
@@ -245,6 +217,14 @@
                     style="display: inline-block"
                   />
                 </a>
+              </td>
+            </tr>
+            <tr align="center">
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
               </td>
             </tr>
           </table>
