--- a/Matchmaking mail/index.html
+++ b/Matchmaking mail/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Template</title>
+    <title>Change Email OTP</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -15,11 +15,11 @@
         width: 100%;
         background-color: #f4f4fb;
         padding: 32px;
-        margin: auto;
+        margin: auto;                      
       "
     >
       <!-- Header Section -->
-      <tr align="center">
+      <tr align="center">              
         <td>
           <a target="_blank" href="#">
             <img
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Reset Password OTP
+            Change Email OTP
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -49,11 +49,11 @@
         >
           <p>Dear Shaher,</p>
           <p style="font-weight: bold">
-            We received a request to change your password.
+            We received a request to change the email address.
           </p>
           <p>
-            If you would like to change the password, please enter the OTP and
-            complete the process.
+            If you would like to change your email address, please enter the OTP
+            and complete the process.
           </p>
           <p
             style="
@@ -67,7 +67,7 @@
           </p>
           <p
             style="
-            margin: 0px 40px;
+              margin: 0px 40px;
               background-color: #f5f6f7;
               padding: 16px;
               border-radius: 16px;
@@ -79,7 +79,7 @@
           >
             123456
           </p>
-          <p style="margin-top: 35px;">
+          <p style="margin-top: 35px">
             If you have any questions or need assistance, please contact us at
             <a href="#">support@noblemarriage.com</a>.
           </p>
@@ -127,7 +127,7 @@
 
             <tr align="center">
               <td style="padding-bottom: 24px">
-                <a style="margin-right: 30px; text-decoration: none;" href="#">
+                <a style="margin-right: 30px; text-decoration: none" href="#">
                   <img
                     src="https://noble-marriage-cdn-bucket.s3.ap-southeast-1.amazonaws.com/emailassets/appStore.jpg"
                     alt="apple Store"
