--- a/Membership Expired/index.html
+++ b/Membership Expired/index.html
@@ -48,7 +48,7 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
+          <p>
             This is a reminder that your NobleMarriage membership expired on
             2024-06-03.
           </p>
@@ -73,7 +73,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            View Membership Plan
           </a>
         </td>
       </tr>
