--- a/Visited payment Page/index.html
+++ b/Visited payment Page/index.html
@@ -75,7 +75,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            View Membership Plan
           </a>
         </td>
       </tr>
