--- a/new Message/index.html
+++ b/new Message/index.html
@@ -48,7 +48,7 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
+          <p>
             <a href="#">Rubaia</a> is trying to reach you.
           </p>
           <p>To see her message and reply back, please check your inbox.</p>
@@ -69,7 +69,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            View Message
           </a>
         </td>
       </tr>
