--- a/Account Deactivation/index.html
+++ b/Account Deactivation/index.html
@@ -72,7 +72,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            Active Account
           </a>
         </td>
       </tr>
