--- a/Membership Expiry Reminder/another/index.html
+++ b/Membership Expiry Reminder/another/index.html
@@ -48,7 +48,7 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
+          <p>
             This is another reminder that your NobleMarriage membership will expire on 2024-06-03.
         </p>
           <p>
@@ -77,7 +77,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            Extand Membership Plan
           </a>
         </td>
       </tr>
