--- a/Membership Expiry Reminder/index.html
+++ b/Membership Expiry Reminder/index.html
@@ -14,7 +14,7 @@
         max-width: 640px;
         width: 100%;
         background-color: #f4f4fb;
-        padding: 32px;                   
+        padding: 32px;
         margin: auto;
       "
     >
@@ -48,18 +48,17 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
-            This is a reminder that your NobleMarriage membership will expire on 2024-06-03.
-        </p>
           <p>
-            Click on "Extend Membership Plan" to upgrade (you new package date will start from existing package's expiry date).
-        </p>
-        <p>As a recurring premium member, we will give you 30% discount.
-        </p>
-        <p>Use "COMEBACK30" Promo Code to get 30% Discount.
-        </p>
-        <p>Happy matchmaking!
-        </p>
+            This is a reminder that your NobleMarriage membership will expire on
+            2024-06-03.
+          </p>
+          <p>
+            Click on "Extend Membership Plan" to upgrade (you new package date
+            will start from existing package's expiry date).
+          </p>
+          <p>As a recurring premium member, we will give you 30% discount.</p>
+          <p>Use "COMEBACK30" Promo Code to get 30% Discount.</p>
+          <p>Happy matchmaking!</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
@@ -77,7 +76,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+            Extand Membership Plan
           </a>
         </td>
       </tr>
@@ -104,7 +103,7 @@
 
             <tr align="center">
               <td style="padding-bottom: 24px">
-                <a style="margin-right: 30px; text-decoration: none;" href="#">
+                <a style="margin-right: 30px; text-decoration: none" href="#">
                   <img
                     src="https://noble-marriage-cdn-bucket.s3.ap-southeast-1.amazonaws.com/emailassets/appStore.jpg"
                     alt="apple Store"
@@ -225,13 +224,13 @@
               </td>
             </tr>
             <tr align="center">
-                <td>
-                  <p style="font-size: 16px">
-                    If you prefer not to receive emails like this, you may
-                    <a href="#">unsubscribe</a>.
-                  </p>
-                </td>
-              </tr>
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
+              </td>
+            </tr>
           </table>
         </td>
       </tr>
