--- a/Membership Expiry Reminder/index.html
+++ b/Membership Expiry Reminder/index.html
@@ -57,7 +57,7 @@
             will start from existing package's expiry date).
           </p>
           <p>As a recurring premium member, we will give you 30% discount.</p>
-          <p>Use "COMEBACK30" Promo Code to get 30% Discount.</p>
+          <p>Use <strong>"COMEBACK30" Promo Code</strong> to get 30% Discount.</p>
           <p>Happy matchmaking!</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
