--- a/Trust Badge/index.html
+++ b/Trust Badge/index.html
@@ -48,9 +48,9 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
-            We are pleased to inform you that your Trust Badge has been
-            approved!
+          <p>
+            We are pleased to inform <strong>you that your Trust Badge has been
+              approved!</strong>
           </p>
           <p>You are now a verified Trust Badge holder of NobleMarriage.</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
