--- a/Visited payment Page/index.html
+++ b/Visited payment Page/index.html
@@ -51,10 +51,10 @@
             You visited our payment page. We can help you upgrade.
         </p>
           <p>
-            Please complete your profile up to 80% and get 20% discount.
+            Please complete your profile up to 80% and <strong>get 20% discount</strong>.
 
           </p>
-          <p>Use Promo Code "NOBLE20" to get 20% discount. We will still need you to complete 80% of your profile.
+          <p>Use <strong>Promo Code "NOBLE20"</strong> to get 20% discount. We will still need you to complete 80% of your profile.
         </p>
         <p>Happy matchmaking!
         </p>
