--- a/new Message/index.html
+++ b/new Message/index.html
@@ -49,7 +49,7 @@
         >
           <p>Dear Shaher,</p>
           <p>
-            <a href="#">Rubaia</a> is trying to reach you.
+            <a href="#"><strong>Rubaia</strong></a> is trying to reach you.
           </p>
           <p>To see her message and reply back, please check your inbox.</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
