--- a/Account Deactivation/index.html
+++ b/Account Deactivation/index.html
@@ -14,7 +14,7 @@
         max-width: 640px;
         width: 100%;
         background-color: #f4f4fb;
-        padding: 32px;                   
+        padding: 32px;
         margin: auto;
       "
     >
@@ -48,13 +48,18 @@
           "
         >
           <p>Dear Shaher,</p>
+          <p>Assalamu'alaykum.</p>
           <p>
-            Assalamu'alaykum.
+            We're sorry to see you leaving, but we confirm that
+            <strong>your account has been deactivated</strong>. Your profile
+            will no longer be visible on NobleMarriage and you will not receive
+            any further communication from us.
           </p>
           <p>
-            We're sorry to see you leaving, but we confirm that your account has been deactivated. Your profile will no longer be visible on NobleMarriage and you will not receive any further communication from us.          </p>
-            <p>If you change your mind and wish to reactivate your account, simply log in again and follow the prompts.</p>
-            <p>Thank you for being a part of our community.</p>
+            If you change your mind and wish to reactivate your account, simply
+            log in again and follow the prompts.
+          </p>
+          <p>Thank you for being a part of our community.</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
@@ -99,7 +104,7 @@
 
             <tr align="center">
               <td style="padding-bottom: 24px">
-                <a style="margin-right: 30px; text-decoration: none;" href="#">
+                <a style="margin-right: 30px; text-decoration: none" href="#">
                   <img
                     src="https://noble-marriage-cdn-bucket.s3.ap-southeast-1.amazonaws.com/emailassets/appStore.jpg"
                     alt="apple Store"
@@ -220,13 +225,13 @@
               </td>
             </tr>
             <tr align="center">
-                <td>
-                  <p style="font-size: 16px">
-                    If you prefer not to receive emails like this, you may
-                    <a href="#">unsubscribe</a>.
-                  </p>
-                </td>
-              </tr>
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
+              </td>
+            </tr>
           </table>
         </td>
       </tr>
