--- a/Membership Expired/index.html
+++ b/Membership Expired/index.html
@@ -56,6 +56,14 @@
             Click on "Open NobleMarriage" to start finding your potential
             partner.
           </p>
+          <p>Click on "View Membership Plan" to upgrade.
+          </p>
+          <p>As a recurring premium member, we will give you 30% discount.
+          </p>
+          <p>Use <strong>"COMEBACK30" Promo Code</strong> to get 30% Discount.
+          </p>
+          <p>Happy matchmaking!
+          </p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
