--- a/Membership Expiry Reminder/another/index.html
+++ b/Membership Expiry Reminder/another/index.html
@@ -14,7 +14,7 @@
         max-width: 640px;
         width: 100%;
         background-color: #f4f4fb;
-        padding: 32px;                   
+        padding: 32px;
         margin: auto;
       "
     >
@@ -48,18 +48,24 @@
           "
         >
           <p>Dear Shaher,</p>
+          <p>Assalamu'alaykum.</p>
           <p>
-            This is another reminder that your NobleMarriage membership will expire on 2024-06-03.
-        </p>
+            We're sorry to see you leaving, but we confirm that
+            <strong
+              >your account and all associated data have been permanently
+              deleted</strong
+            >
+            from NobleMarriage.This action is irreversible and your profile will
+            no longer be visible on our platform. You will not receive any
+            further communication from us.
+          </p>
+          <p>As a recurring premium member, we will give you 30% discount.</p>
           <p>
-            Click on "Extend Membership Plan" to upgrade (you new package date will start from existing package's expiry date).
-        </p>
-        <p>As a recurring premium member, we will give you 30% discount.
-        </p>
-        <p>Use "COMEBACK30" Promo Code to get 30% Discount.
-        </p>
-        <p>Happy matchmaking!
-        </p>
+            If you have any concerns or feedback you would like to share with
+            us, please do not hesitate to reach out to our customer support
+            team.
+          </p>
+          <p>Thank you for being a part of our community.</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
@@ -104,7 +110,7 @@
 
             <tr align="center">
               <td style="padding-bottom: 24px">
-                <a style="margin-right: 30px; text-decoration: none;" href="#">
+                <a style="margin-right: 30px; text-decoration: none" href="#">
                   <img
                     src="https://noble-marriage-cdn-bucket.s3.ap-southeast-1.amazonaws.com/emailassets/appStore.jpg"
                     alt="apple Store"
@@ -225,13 +231,13 @@
               </td>
             </tr>
             <tr align="center">
-                <td>
-                  <p style="font-size: 16px">
-                    If you prefer not to receive emails like this, you may
-                    <a href="#">unsubscribe</a>.
-                  </p>
-                </td>
-              </tr>
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
+              </td>
+            </tr>
           </table>
         </td>
       </tr>
