--- a/Profile Description Rejected/index.html
+++ b/Profile Description Rejected/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Membership Upgrade</title>
+    <title>Profile Description Rejected</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Your Membership Has Been Upgraded
+            Profile Description Rejected
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -48,16 +48,16 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p>
-            Congrats! We have selected your profile for a <strong>3 Months free premium
-              membership upgrade.</strong>
+          <p>Assalamu'alaykum.</p>
+          <p style="font-weight: bold">
+            Your profile description has been rejected by our Admin.
           </p>
+          <p>Please <a href="#">review your description</a> and make the changes.</p>
+          
           <p>
-            You will enjoy full access during this period, that means unlimited chat.
-
+            You can also write to us at
+            <a href="#">support@noblemarriage.com</a> for any enquiries.
           </p>
-          <p>Keep it halal and find your dream wife.</p>
-          <p>Once your free period is over, you can upgrade your profile with a discounted rate.Best wishes,</p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
@@ -75,7 +75,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+          Review Profile Description
           </a>
         </td>
       </tr>
@@ -220,6 +220,14 @@
                     style="display: inline-block"
                   />
                 </a>
+              </td>
+            </tr>
+            <tr align="center">
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
               </td>
             </tr>
           </table>
