--- a/Trust Badge Document Rejected/index.html
+++ b/Trust Badge Document Rejected/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Membership Upgrade</title>
+    <title>Trust Badge Document Rejected</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Your Membership Has Been Upgraded
+            Trust Badge Document Rejected
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -48,16 +48,17 @@
           "
         >
           <p>Dear Shaher,</p>
-          <p>
-            Congrats! We have selected your profile for a <strong>3 Months free premium
-              membership upgrade.</strong>
-          </p>
-          <p>
-            You will enjoy full access during this period, that means unlimited chat.
 
+          <p style="font-weight: bold">
+            We regret to inform you that <strong>your Trust Badge document has been rejected</strong>.
           </p>
-          <p>Keep it halal and find your dream wife.</p>
-          <p>Once your free period is over, you can upgrade your profile with a discounted rate.Best wishes,</p>
+          <p>
+           <strong> Reason for rejection:</strong> [Admin Panel message]
+          </p>
+          <p>You can <a href="#">resubmit</a> your document for verification.</p>
+          <p>
+            Please review your document and make the changes. You can also write to us at <a href="#">support@noblemarriage.com</a> for any enquiries.
+          </p>
           <p>Best wishes,<br />NobleMarriage Team</p>
         </td>
       </tr>
@@ -75,7 +76,7 @@
             "
             href="#"
           >
-            Open NobleMarriage
+          Get Trust Badge
           </a>
         </td>
       </tr>
@@ -220,6 +221,14 @@
                     style="display: inline-block"
                   />
                 </a>
+              </td>
+            </tr>
+            <tr align="center">
+              <td>
+                <p style="font-size: 16px">
+                  If you prefer not to receive emails like this, you may
+                  <a href="#">unsubscribe</a>.
+                </p>
               </td>
             </tr>
           </table>
