--- a/profile view/index.html
+++ b/profile view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Your Daily Match</title>
+    <title>Profile Shortlisted</title>
   </head>
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
@@ -28,7 +28,7 @@
             />
           </a>
           <p style="font-size: 41px; padding: 32px 0 10px; margin: 0">
-            Your Daily Match
+            Rasheda Viewed Your Profile
           </p>
           <p style="font-size: 20px; margin: 0; margin-bottom: 10px">
             03-Jun-2024
@@ -43,67 +43,98 @@
             background-color: white;
             text-align: start;
             padding: 32px;
+            padding-bottom: 0;
             font-size: 20px;
             border-radius: 4px;
           "
         >
           <p>Dear Shaher,</p>
-          <p style="font-weight: bold">
-            Following profiles match your preference.
-          </p>
-          <p>Click on "View Profile" to access and know them better 🙂</p>
-          <p>Best wishes,<br />NobleMarriage Team</p>
+          <p style="font-weight: bold">Rasheda has viewed your profile.</p>
+          <p>Click on "View Profile" to access and know her better 🙂</p>
+
+          <tr>
+            <td
+              style="
+                background-color: white;
+                text-align: start;
+                padding: 32px;
+                padding-top: 20px;
+                font-size: 20px;
+                border-radius: 4px;
+              "
+            >
+              <table style="border-spacing: 0px; width: 100%">
+                <tr style="background-color: #f4f4fb; border-radius: 10px">
+                  <td
+                    style="
+                      width: 99px;
+                      border-bottom-left-radius: 8px;
+                      border-top-left-radius: 8px;
+                      padding: 0px;
+                      padding-right: 25px;
+                      padding-left: 5px;
+                      height: 99px;
+                    "
+                  >
+                    <a href="#"
+                      ><img
+                        style="width: 100%; padding: 5px; border-radius: 15px"
+                        src="../profile.jpg"
+                        alt="Profile Image"
+                    /></a>
+                  </td>
+                  <td style="padding: 0px; overflow-block: auto">
+                    <p style="font-weight: bold; text-wrap: 1; margin-top: 0px">
+                      Nushaiba Binte
+                    </p>
+                    <p
+                      style="
+                        color: #b2b6c2;
+                        font-size: 14px;
+                        margin: 0;
+                        margin-bottom: 8px;
+                      "
+                    >
+                      21 years
+                    </p>
+                    <p style="color: #b2b6c2; font-size: 14px; margin: 0">
+                      Calgary, Canada
+                    </p>
+                  </td>
+                  <td
+                    align="end"
+                    style="
+                      padding: 0px;
+                      border-bottom-right-radius: 8px;
+                      border-top-right-radius: 8px;
+                      padding-right: 10px;
+                      width: 100px;
+                    "
+                  >
+                    <a
+                      style="
+                        font-size: 14px;
+                        padding: 10px 12px;
+                        border-radius: 10px;
+                        text-decoration: none;
+                        background-color: #ba0060;
+                        color: white;
+                      "
+                      href="#"
+                      >View profile</a
+                    >
+                  </td>
+                </tr>
+              </table>
+              <p style="padding-top: 15px">
+                Best wishes,<br />NobleMarriage Team
+              </p>
+            </td>
+          </tr>
         </td>
       </tr>
 
-      <tr>
-        <td>
-          <p style="color: #006fee; font-size: 30px; text-align: center">
-            Recommended Matches
-          </p>
-        </td>
-      </tr>
-      <tr>
-        <td
-          style="
-            background-color: white;
-            text-align: start;
-            padding: 32px;
-            margin: 32px;
-            font-size: 20px;
-            border-radius: 4px;
-          "
-        >
-          <table style="border-spacing: 0px; width: 100%;">
-            <tr style="background-color: #f4f4fb; border-radius: 10px;">
-              <td style="width: 99px; border-bottom-left-radius: 8px; border-top-left-radius: 8px; padding: 0px; padding-right: 25px; padding-left: 5px; height: 99px;"><a href="#"><img style="width: 100%; padding: 5px; border-radius: 15px;" src="../profile.jpg" alt="Profile Image"></a></td>
-              <td style="padding: 0px; overflow-block: auto;">
-                <p style="font-weight: bold; text-wrap: 1; margin-top: 0px;">Nushaiba Binte</p>
-                <p style="color: #b2b6c2; font-size: 14px; margin: 0; margin-bottom: 8px;">21 years</p>
-                <p style="color: #b2b6c2; font-size: 14px; margin: 0;">Calgary, Canada</p>
-              </td>
-              <td align="end" style="padding: 0px; border-bottom-right-radius: 8px; border-top-right-radius: 8px; padding-right: 10px; width: 100px;"><a style="font-size: 14px; padding: 10px 12px; border-radius: 10px; text-decoration: none; background-color: #BA0060; color: white;" href="#">View profile</a></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
       <!-- Footer Section -->
-      <tr align="center">
-        <td style="padding-top: 50px; padding-bottom: 40px">
-          <a
-            style="
-              background-color: #006fee;
-              text-decoration: none;
-              border-radius: 12px;
-              padding: 12px 16px;
-              color: #ffffff;
-            "
-            href="#"
-          >
-            View All
-          </a>
-        </td>
-      </tr>
 
       <tr style="background-color: #eae6ed">
         <td style="padding: 32px; border-radius: 4px">
