--- a/Profile PDF/index.html
+++ b/Profile PDF/index.html
@@ -8,7 +8,6 @@
   <body style="margin: 0; padding: 0; background-color: #ffffff">
     <table
       align="center"
-      width="640px"
       cellspacing="0"
       cellpadding="0"
       border="0"
@@ -160,8 +159,21 @@
                       </p>
                     </td>
                     <td>
-                      <p style="text-align: right; margin: 0; padding-bottom: 20px; margin-right: 10px;">
-                        <span style="padding: 2px 10px; border-radius: 5px; background-color: #EAE6ED;">
+                      <p
+                        style="
+                          text-align: right;
+                          margin: 0;
+                          padding-bottom: 20px;
+                          margin-right: 10px;
+                        "
+                      >
+                        <span
+                          style="
+                            padding: 2px 10px;
+                            border-radius: 5px;
+                            background-color: #eae6ed;
+                          "
+                        >
                           <img src="./trust.png" alt="" />
                           <img src="./subscription.png" alt="" />
                         </span>
@@ -175,9 +187,245 @@
                         src="./image 59.png"
                         alt=""
                       />
-                      <p style="font-size: 8px; color: #ffffff;">
+                      <p style="font-size: 8px; color: #ffffff">
                         Scan to see the profile online.
                       </p>
+                    </td>
+                  </tr>
+                </table>
+
+                <!-- Body part -->
+
+                <table
+                  align="center"
+                  width="525"
+                  cellspacing="0"
+                  cellpadding="0"
+                  border="0"
+                  style="
+                    background-color: #eae6ed;
+                    padding: 20px;
+                    border-radius: 10px;
+                  "
+                >
+                  <tr>
+                    <td>
+                      <table
+                        cellspacing="0"
+                        cellpadding="0"
+                        border="0"
+                        margin="0"
+                      >
+                        <tr>
+                          <td>
+                            <p
+                              style="
+                                margin: 0;
+                                line-height: 15px;
+                                font-size: 10px;
+                                color: #310048;
+                              "
+                            >
+                              About Faiza
+                            </p>
+                            <p
+                              style="
+                                margin: 0;
+                                font-size: 8px;
+                                margin-bottom: 4.47px;
+                                line-height: 15px;
+                              "
+                            >
+                              Profile created by Self
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                              "
+                            >
+                              <tr>
+                                <td>
+                                  <p
+                                    style="
+                                      font-size: 8.72px;
+                                      line-height: 12.45px;
+                                    "
+                                  >
+                                    <img
+                                      align="center"
+                                      style="padding-right: 6.85px"
+                                      src="./phone.png"
+                                      alt=""
+                                    />+880 17** *** *97<img
+                                      align="right"
+                                      src="./locker.png"
+                                      alt=""
+                                    />
+                                  </p>
+                                  <p style="border: 1px solid #eae6ed"></p>
+
+                                  <p
+                                    style="
+                                      font-size: 8.72px;
+                                      line-height: 12.45px;
+                                    "
+                                  >
+                                    <img
+                                      align="center"
+                                      style="padding-right: 6.85px"
+                                      src="./contact.png"
+                                      alt=""
+                                    />Full Profile Access<img
+                                      align="right"
+                                      src="./locker.png"
+                                      alt=""
+                                    />
+                                  </p>
+                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="
+                                      font-size: 8.72px;
+                                      line-height: 12.45px;
+                                    "
+                                  >
+                                    <img
+                                      align="center"
+                                      style="padding-right: 6.85px"
+                                      src="./messaging.png"
+                                      alt=""
+                                    />Unlimited Messaging<img
+                                      align="right"
+                                      src="./locker.png"
+                                      alt=""
+                                    />
+                                  </p>
+                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="
+                                      font-size: 8.72px;
+                                      line-height: 12.45px;
+                                    "
+                                  >
+                                    <img
+                                      align="center"
+                                      style="padding-right: 6.85px"
+                                      src="./email.png"
+                                      alt=""
+                                    />hossainamzad38@gmail.com<img
+                                      align="right"
+                                      src="./locker.png"
+                                      alt=""
+                                    />
+                                  </p>
+                                  <p style="border: 1px solid #eae6ed"></p>
+                                  <p
+                                    style="
+                                      font-size: 7.47px;
+                                      line-height: 11.21px;
+                                    "
+                                  >
+                                    Enter Promo Code
+                                    <span style="color: red">Fast20</span> to
+                                    get discount!
+                                    <button
+                                      style="
+                                        color: white;
+                                        align-items: end;
+                                        background-color: #310048;
+                                        border-radius: 8px;
+                                        padding: 5px;
+
+                                        font-size: 9.96px;
+                                      "
+                                    >
+                                      Upgrade
+                                    </button>
+                                  </p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table
+                        cellspacing="0"
+                        cellpadding="0"
+                        border="0"
+                        width="233.44"
+                        style="
+                          background-color: #ffffff;
+                          padding: 10px 15px;
+                          border-radius: 5px;
+                          margin-top: 7.47px;
+                        "
+                      >
+                        <tr>
+                          <td style="font-size: 7.47px; line-height: 11.21px">
+                            I am an easy going person with a positive attitude
+                            towards life. Iam simple, soft spoken, respectful
+                            person with the right mix of modern and traditional
+                            cultures. I have seen life take unexpected turns and
+                            every time I thought there is no way out, thanks to
+                            Almighty his grace and guidance has bring back light
+                            and happiness to my life.
+                          </td>
+                        </tr>
+                      </table>
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./info.png"
+                                alt=""
+                              />
+                              Basic Info
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td>
+                                  <p>Gender</p>
+                                  <p>Age</p>
+                                  <p>Lives In</p>
+                                  <p>Home Type</p>
+                                  <p>Relocation Plan</p>
+                                  <p>Ethnic Origin</p>
+                                  <p>Residency Status</p>
+                                  <p>Marital Status</p>
+                                  <p>Spoken Language</p>
+                                  <p>Wali</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                    <td>
+                      <table>
+                        <tr>
+                          <td></td>
+                        </tr>
+                      </table>
                     </td>
                   </tr>
                 </table>
