--- a/Profile PDF/index.html
+++ b/Profile PDF/index.html
@@ -340,7 +340,6 @@
                                         background-color: #310048;
                                         border-radius: 8px;
                                         padding: 5px;
-
                                         font-size: 9.96px;
                                       "
                                     >
@@ -350,6 +349,107 @@
                                 </td>
                               </tr>
                             </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <table
+                        cellspacing="0"
+                        cellpadding="0"
+                        border="0"
+                        width="233.44"
+                        style="
+                          background-color: #ffffff;
+                          padding: 10px 15px;
+                          border-radius: 5px;
+                          margin-top: 7.47px;
+                        "
+                      >
+                        <tr>
+                          <td style="font-size: 7.47px; line-height: 11.21px">
+                            I am an easy going person with a positive attitude
+                            towards life. Iam simple, soft spoken, respectful
+                            person with the right mix of modern and traditional
+                            cultures. I have seen life take unexpected turns and
+                            every time I thought there is no way out, thanks to
+                            Almighty his grace and guidance has bring back light
+                            and happiness to my life.
+                          </td>
+                        </tr>
+                      </table>
+
+                      <!-- Basic Info -->
+                      <table>
+                        <tr>
+                          <td>
+                            <p style="font-size: 10px; color: #310048">
+                              <img
+                                align="center"
+                                style="margin-right: 4px"
+                                src="./info.png"
+                                alt=""
+                              />
+                              Basic Info
+                            </p>
+                            <table
+                              cellspacing="0"
+                              cellpadding="0"
+                              border="0"
+                              width="233.44"
+                              style="
+                                background-color: #ffffff;
+                                padding: 10px 15px;
+                                border-radius: 5px;
+                                margin-top: 7.47px;
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
+                                  <p>Gender</p>
+                                  <p>Age</p>
+                                  <p>Lives In</p>
+                                  <p>Home Type</p>
+                                  <p>Relocation Plan</p>
+                                  <p>Ethnic Origin</p>
+                                  <p>Residency Status</p>
+                                  <p>Marital Status</p>
+                                  <p>Spoken Language</p>
+                                  <p>Wali</p>
+                                </td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  <p>: Female</p>
+                                  <p>: 23</p>
+                                  <p>: Dhaka,Bangladesh</p>
+                                  <p>: Apartment</p>
+                                  <p>: Not sure about relocating</p>
+                                  <p>: Asian - bangladeshi</p>
+                                  <p>: Citizenship</p>
+                                  <p>: Never Married</p>
+                                  <p>: Bangali, English</p>
+                                  <p>: Father</p>
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                    <!-- Photo -->
+                    <td>
+                      <table align="center" width="233.44">
+                        <tr>
+                          <td>
+                            <img src="" alt="">
                           </td>
                         </tr>
                       </table>
@@ -402,7 +502,13 @@
                               "
                             >
                               <tr>
-                                <td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                    font-weight: 600;
+                                  "
+                                >
                                   <p>Gender</p>
                                   <p>Age</p>
                                   <p>Lives In</p>
@@ -414,16 +520,26 @@
                                   <p>Spoken Language</p>
                                   <p>Wali</p>
                                 </td>
+                                <td
+                                  style="
+                                    font-size: 7.47px;
+                                    line-height: 11.21px;
+                                  "
+                                >
+                                  <p>: Female</p>
+                                  <p>: 23</p>
+                                  <p>: Dhaka,Bangladesh</p>
+                                  <p>: Apartment</p>
+                                  <p>: Not sure about relocating</p>
+                                  <p>: Asian - bangladeshi</p>
+                                  <p>: Citizenship</p>
+                                  <p>: Never Married</p>
+                                  <p>: Bangali, English</p>
+                                  <p>: Father</p>
+                                </td>
                               </tr>
                             </table>
                           </td>
-                        </tr>
-                      </table>
-                    </td>
-                    <td>
-                      <table>
-                        <tr>
-                          <td></td>
                         </tr>
                       </table>
                     </td>
